Refresh after JEP 401 integration